--- a/flutter_inappwebview_windows/windows/CMakeLists.txt
+++ b/flutter_inappwebview_windows/windows/CMakeLists.txt
@@ -127,6 +127,10 @@ list(APPEND PLUGIN_SOURCES
   "types/process_failed_detail.h"
   "types/render_process_gone_detail.cpp"
   "types/render_process_gone_detail.h"
+  "types/download_start_request.cpp"
+  "types/download_start_request.h"
+  "types/download_start_response.cpp"
+  "types/download_start_response.h"
   "custom_platform_view/custom_platform_view.cc"
   "custom_platform_view/custom_platform_view.h"
   "custom_platform_view/texture_bridge.cc"
