--- a/flutter_inappwebview_windows/windows/CMakeLists.txt
+++ b/flutter_inappwebview_windows/windows/CMakeLists.txt
@@ -43,6 +43,8 @@ list(APPEND PLUGIN_SOURCES
   "flutter_inappwebview_windows_plugin.cpp"
   "flutter_inappwebview_windows_plugin.h"
   "utils/log.h"
+  "utils/defer.h"
+  "utils/timer.h"
   "utils/strconv.h"
   "utils/map.h"
   "utils/vector.h"
@@ -131,6 +133,8 @@ list(APPEND PLUGIN_SOURCES
   "types/download_start_request.h"
   "types/download_start_response.cpp"
   "types/download_start_response.h"
+  "types/browser_process_exited_detail.cpp"
+  "types/browser_process_exited_detail.h"
   "custom_platform_view/custom_platform_view.cc"
   "custom_platform_view/custom_platform_view.h"
   "custom_platform_view/texture_bridge.cc"
