--- a/flutter_inappwebview_windows/windows/CMakeLists.txt
+++ b/flutter_inappwebview_windows/windows/CMakeLists.txt
@@ -139,6 +139,10 @@ list(APPEND PLUGIN_SOURCES
   "types/browser_process_info.h"
   "types/browser_process_infos_changed_detail.cpp"
   "types/browser_process_infos_changed_detail.h"
+  "types/physical_key_status.cpp"
+  "types/physical_key_status.h"
+  "types/accelerator_key_pressed_detail.cpp"
+  "types/accelerator_key_pressed_detail.h"
   "custom_platform_view/custom_platform_view.cc"
   "custom_platform_view/custom_platform_view.h"
   "custom_platform_view/texture_bridge.cc"
