--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -20,18 +20,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: #^1.4.0-beta.2
-    path: ../flutter_inappwebview_platform_interface
-  flutter_inappwebview_android: #^1.2.0-beta.2
-    path: ../flutter_inappwebview_android
-  flutter_inappwebview_ios: #^1.2.0-beta.2
-    path: ../flutter_inappwebview_ios
-  flutter_inappwebview_macos: #^1.2.0-beta.2
-    path: ../flutter_inappwebview_macos
-  flutter_inappwebview_web: #^1.2.0-beta.2
-    path: ../flutter_inappwebview_web
-  flutter_inappwebview_windows: #^0.7.0-beta.2
-    path: ../flutter_inappwebview_windows
+  flutter_inappwebview_platform_interface: ^1.4.0-beta.2
+    # path: ../flutter_inappwebview_platform_interface
+  flutter_inappwebview_android: ^1.2.0-beta.2
+    # path: ../flutter_inappwebview_android
+  flutter_inappwebview_ios: ^1.2.0-beta.2
+    # path: ../flutter_inappwebview_ios
+  flutter_inappwebview_macos: ^1.2.0-beta.2
+    # path: ../flutter_inappwebview_macos
+  flutter_inappwebview_web: ^1.2.0-beta.2
+    # path: ../flutter_inappwebview_web
+  flutter_inappwebview_windows: ^0.7.0-beta.2
+    # path: ../flutter_inappwebview_windows
 
 dev_dependencies:
   flutter_test:
