--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_inappwebview
 description: A Flutter plugin that allows you to add an inline webview, to use an headless webview, and to open an in-app browser window.
-version: 6.2.0-beta.2
+version: 6.2.0-beta.3
 homepage: https://inappwebview.dev/
 repository: https://github.com/pichillilorenzo/flutter_inappwebview
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues
@@ -20,18 +20,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: ^1.4.0-beta.2
-    # path: ../flutter_inappwebview_platform_interface
-  flutter_inappwebview_android: ^1.2.0-beta.2
-    # path: ../flutter_inappwebview_android
-  flutter_inappwebview_ios: ^1.2.0-beta.2
-    # path: ../flutter_inappwebview_ios
-  flutter_inappwebview_macos: ^1.2.0-beta.2
-    # path: ../flutter_inappwebview_macos
-  flutter_inappwebview_web: ^1.2.0-beta.2
-    # path: ../flutter_inappwebview_web
-  flutter_inappwebview_windows: ^0.7.0-beta.2
-    # path: ../flutter_inappwebview_windows
+  flutter_inappwebview_platform_interface: #^1.4.0-beta.3
+    path: ../flutter_inappwebview_platform_interface
+  flutter_inappwebview_android: #^1.2.0-beta.3
+    path: ../flutter_inappwebview_android
+  flutter_inappwebview_ios: #^1.2.0-beta.3
+    path: ../flutter_inappwebview_ios
+  flutter_inappwebview_macos: #^1.2.0-beta.3
+    path: ../flutter_inappwebview_macos
+  flutter_inappwebview_web: #^1.2.0-beta.3
+    path: ../flutter_inappwebview_web
+  flutter_inappwebview_windows: #^0.7.0-beta.3
+    path: ../flutter_inappwebview_windows
 
 dev_dependencies:
   flutter_test:
