--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -4,6 +4,7 @@ version: 6.0.0
 homepage: https://inappwebview.dev/
 repository: https://github.com/pichillilorenzo/flutter_inappwebview
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues
+publish_to: none
 topics:
   - html
   - webview
@@ -20,7 +21,8 @@ dependencies:
     sdk: flutter
   flutter_inappwebview_platform_interface: ^1.0.10
   flutter_inappwebview_android: ^1.0.12
-  flutter_inappwebview_ios: 
+  # flutter_inappwebview_ios: ^1.0.13
+  flutter_inappwebview_ios:
     path: ../flutter_inappwebview_ios
   flutter_inappwebview_macos: ^1.0.11
   flutter_inappwebview_web: ^1.0.8
