--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -23,7 +23,10 @@ dependencies:
   flutter_inappwebview_android: ^1.0.12
   # flutter_inappwebview_ios: ^1.0.13
   flutter_inappwebview_ios:
-    path: ../flutter_inappwebview_ios
+    git:
+      url: https://github.com/nubank/flutter_inappwebview.git
+      ref: b0826c4efd2f2248a47679f94f4bbd1fefb57399
+      path: flutter_inappwebview_ios
   flutter_inappwebview_macos: ^1.0.11
   flutter_inappwebview_web: ^1.0.8
 
