--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   flutter_inappwebview_platform_interface: ^1.0.10
   flutter_inappwebview_android:
     path: ../flutter_inappwebview_android
-  flutter_inappwebview_ios: ^1.0.13
+  flutter_inappwebview_ios:
+    path: ../flutter_inappwebview_ios
   flutter_inappwebview_macos: ^1.0.11
   flutter_inappwebview_web: ^1.0.8
 
