--- a/flutter_inappwebview_android/android/build.gradle
+++ b/flutter_inappwebview_android/android/build.gradle
@@ -24,7 +24,7 @@ apply plugin: 'com.android.library'
 android {
     // Conditional for compatibility with AGP <4.2.
     if (project.android.hasProperty("namespace")) {
-        namespace 'com.pichillilorenzo.flutter_inappwebview_android'
+        namespace 'com.pichillilorenzo.flutter_inappwebview'
     }
     compileSdk 34
 
