--- a/flutter_inappwebview_android/analysis_options.yaml
+++ b/flutter_inappwebview_android/analysis_options.yaml
@@ -2,8 +2,8 @@ include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
-    constant_identifier_names: ignore
-    deprecated_member_use_from_same_package: ignore
+    constant_identifier_names: false
+    deprecated_member_use_from_same_package: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
